--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtConfig": {
+    "Secret": "k2j0Cvf9ldN7dkaoCXoHSYHwYiHrklBbvR5Y8M3A"
+  }
 }
